@@ -26,8 +26,9 @@
  * @bug 8221481
  * @library /test/lib
  * @build jdk.test.lib.Utils
- * @compile --enable-preview -source ${jdk.version} Timeouts.java
- * @run testng/othervm/timeout=180 --enable-preview Timeouts
+ * @enablePreview
+ * @compile Timeouts.java
+ * @run testng/othervm/timeout=180 Timeouts
  * @summary Test Socket timeouts
  */
 
@@ -252,7 +253,7 @@ public class Timeouts {
             int b = s2.getInputStream().read();
             assertTrue(b == 99);
 
-            // schedule s2 to be be closed
+            // schedule s2 to be closed
             scheduleClose(s2, 3000);
 
             // write a lot so that write blocks
